# pyright-pylance-access-attribute-item

./: main.py  pyproject.toml
.github/workflows/: pyright.yml
